Cycles crash with new bmw file #43357

Closed
opened 2015-01-22 10:08:14 +01:00 by Thomas Dinges · 7 comments

System Information
Mac OS X 10.9.4

Blender Version
Broken: 1aa8f0d3c0

Short description of error
Crash during scene preparation.

Exact steps for others to reproduce the error
Download the new bmw files from here: http://blenderartists.org/forum/showthread.php?239480-2-7x-Cycles-benchmark-(Updated-BMW)
Direct link: https://dl.dropboxusercontent.com/u/1742071/1m/BMW27.blend

Press F12, it crashes on scene preparation (BVH). Note: Disabling Spatial Splits fixes it.

**System Information** Mac OS X 10.9.4 **Blender Version** Broken: 1aa8f0d3c02f **Short description of error** Crash during scene preparation. **Exact steps for others to reproduce the error** Download the new bmw files from here: http://blenderartists.org/forum/showthread.php?239480-2-7x-Cycles-benchmark-(Updated-BMW) Direct link: https://dl.dropboxusercontent.com/u/1742071/1m/BMW27.blend Press F12, it crashes on scene preparation (BVH). Note: Disabling Spatial Splits fixes it.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Thomas Dinges 2015-01-22 10:08:14 +01:00
Author
Owner

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

This issue was referenced by fa46f5a289

This issue was referenced by fa46f5a2897d7cd3731271b3cf7e2d619643d73a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fa46f5a289.

Closed by commit fa46f5a289.
Author
Owner

Thanks for the quick fix!

Thanks for the quick fix!

This issue was referenced by blender/cycles@f8c1ab6b8e

This issue was referenced by blender/cycles@f8c1ab6b8ecfc4cddd48a1c5f82e0958b65f89e5
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43357
No description provided.